--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 #collections_path = ./collections
 roles_path = ./roles
 inventory  = ./hosts
-remote_user = jmarti45
+remote_user = ts_ansible
 hash_behaviour = merge
 #stdout_callback = full_skip
 host_key_checking = False
